# vyntrio-os

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE_OVERVIEW.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  Makefile  README.md  REPOSITORY_STRUCTURE.md  STYLESEED.md  go.mod  go.sum  skills-lock.json  sqlc.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.styleseed/: score-appliance-full.md  score-appliance-ops.md
adr/: 0000-template.md  README.md
api/: openapi.yaml
backend/: README.md  go.mod
cmd/: README.md
cursor-prompts/: phase-01-foundation.md  phase-02-linux-base.md  phase-03-backend.md  phase-04-dashboard.md  phase-05-storage.md  phase-06-containers.md  phase-07-virtualization.md  phase-08-marketplace.md  phase-09-licensing.md  phase-10-release.md
desktop/vyntrio-media-creator/src-tauri/: Cargo.toml  tauri.conf.json
desktop/vyntrio-media-creator/src-tauri/src/: devices.rs  lib.rs  main.rs  releases.rs  write.rs
distro/: README.md
docs/: 00_PROJECT.md  01_MASTERPLAN.md  02_ARCHITECTURE.md  03_ROADMAP.md  04_TECH_STACK.md  05_STORAGE.md  06_DASHBOARD.md  07_BACKEND.md  08_FRONTEND.md  09_API.md  10_DATABASE.md  11_AUTH.md  12_NETWORK.md  13_DOCKER.md  14_VM.md  15_LICENSE.md  16_UPDATE.md  17_SECURITY.md  18_TESTING.md  19_RELEASE.md  20_TASKS.md  21_CURSOR_REPO_SETUP.md  22_WEBSITE.md  23_WEBSITE_DESIGN_DIRECTION.md  24_INSTALL_MEDIA.md  API_CONVENTIONS.md  AUDIT_FOUNDATION.md  PHASE_1_FOUNDATION_STATUS.md  README.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  (+2 more)
(+600 files in other folders)
