[package]
name = "vyntrio-media-creator"
version = "0.2.0"
description = "Vyntrio native desktop Media Creator (Tauri)"
authors = ["Vyntrio"]
edition = "2021"

[lib]
name = "vyntrio_media_creator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
